# openclaw-skill-exchange

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  fly.toml  hardhat.config.js  nginx.conf  package-lock.json  package.json  pyproject.toml  render.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: e71d17c04669_initial_schema.py
app/: config.py  db.py  logging_config.py  main.py
app/auth/: deps.py  signature.py
app/background/: tasks.py
app/blockchain/: bridge.py  contracts.py  provider.py  settlement.py
app/models/: schemas.py
app/routers/: agents.py  bridge.py  collaboration.py  disputes.py  guide.py  mcp.py  reputation.py  skills.py  submissions.py  tasks.py  wallet.py  ws.py
app/services/: auto_review.py  collaboration_service.py  content_guard.py  event_bus.py  fair_share.py  matchmaker.py  rate_limiter.py  skill_service.py  submission_service.py  task_engine.py  tx_guard.py  wallet_service.py  webhook_service.py
app/static/: index.html
contracts/: SHLBridge.sol  SHLToken.sol
contracts/abi/: SHLBridge.json  SHLToken.json
mcp-server/: README.md  index.js  package.json
scripts/: deploy.js  seed_tasks.py
tests/: test_background.py  test_bridge.py  test_collaboration.py  test_disputes.py  test_e2e.py  test_ed25519.py  test_edge_cases.py  test_guide.py  test_mcp.py  test_new_features.py  test_recommender.py  test_security.py  test_skill_versions.py  test_wallet_audit.py  test_websocket.py  test_zz_auto_review.py
(+12 files in other folders)
